data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3837.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\94\80\80\80\00\01\03"
    "\65\6e\76\0c\65\78\74\65\72\6e\61\6c\46\75\6e\63"
    "\00\00\03\83\80\80\80\00\02\00\01\07\90\80\80\80"
    "\00\01\0c\69\6e\74\65\72\6e\61\6c\46\75\6e\63\00"
    "\01\0a\97\80\80\80\00\02\86\80\80\80\00\00\20\00"
    "\10\00\0b\86\80\80\80\00\00\41\2a\10\01\0b"
  )
""
)